--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			$(document).ready(function() {
 				$.ajax({
 					type: 'GET',
-					url: 'http://localhost/maskitbackend/php/check-session.php',
+					url: 'http://sainsgo.com/maskitbackend/php/check-session.php',
 					dataType: 'text',
 					cache: false,
 					success: function(a) {
