--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
 <div style="width: 100%; height: 100%; overflow-x: hidden!important; position: relative;">
     <div style="width: 100%; height: 100%; display: flex; flex-flow: column nowrap;">
-        <div style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap;">
+        <div style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; position: fixed; left: 0; top: 0;">
             <div id="menu" onclick="openMenu()" style="width: 50px; height: 100%; display: flex; align-items: center;">
                 <img src="img/menu.png" width="20px" height="20px" style="margin-left: 10px;">
             </div>
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div style="width: 100%; height: calc(100% - 50px); display: flex; justify-content: center; align-items: center; flex-flow: column nowrap;">
+        <div style="width: 100%; height: calc(100% - 50px); display: flex; justify-content: center; align-items: center; flex-flow: column nowrap; margin-top: 40px;">
             <div style="color: black; text-align: center;">Tidak ada yang ditampilkan</div>
             <div style="color: black; margin-top: 10px; text-align: center; margin-left: 30px; margin-right: 30px;">
                 Akses menu dengan mengklik tombol pojok kiri atas
