--- a/diseases.html
+++ b/diseases.html
@@ -10,7 +10,7 @@
 <body>
 <div style="width: 100%; height: 100%; overflow-x: hidden!important; position: relative;">
     <div style="width: 100%; height: 100%; display: flex; flex-flow: column nowrap;">
-        <div style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; position: fixed; left: 0; top: 0;">
+        <div style="width: 100%; height: 60px; display: flex; flex-flow: row nowrap; position: fixed; left: 0; top: 0;">
             <div id="menu" onclick="openMenu()" style="width: 50px; height: 100%; display: flex; align-items: center;">
                 <img src="img/menu.png" width="20px" height="20px" style="margin-left: 10px;">
             </div>
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-        <div id="diseases" style="width: 100%; display: flex; flex-flow: column nowrap; padding: 10px; margin-top: 40px;">
+        <div id="diseases" style="width: 100%; display: flex; flex-flow: column nowrap; padding: 10px; margin-top: 60px; margin-bottom: 70px;">
         </div>
     </div>
     <div id="overlay" onclick="closeMenu()"
