--- a/home.html
+++ b/home.html
@@ -39,20 +39,25 @@
             <img src="img/bacteria.png" width="20px" height="20px" style="margin-left: 20px;">
             <div style="color: white; font-size: 18px; margin-left: 20px;">Penyakit</div>
         </div>
-        <div onclick="openDiseaseStatistics()" class="menu-item"
+        <!--<div onclick="openDiseaseStatistics()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
             <img src="img/sneeze.png" width="20px" height="20px" style="margin-left: 20px;">
             <div style="color: white; font-size: 18px; margin-left: 20px;">Statistik Penyakit</div>
-        </div>
+        </div>-->
         <div onclick="openUsers()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
             <img src="img/user-2.png" width="20px" height="20px" style="margin-left: 20px;">
             <div style="color: white; font-size: 18px; margin-left: 20px;">Pengguna</div>
         </div>
+        <div onclick="openAdmins()" class="menu-item"
+             style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
+            <img src="img/user-2.png" width="20px" height="20px" style="margin-left: 20px;">
+            <div style="color: white; font-size: 18px; margin-left: 20px;">Admin</div>
+        </div>
         <div onclick="openSerialNumbers()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
             <img src="img/coupon.png" width="20px" height="20px" style="margin-left: 20px;">
-            <div style="color: white; font-size: 18px; margin-left: 20px;">Nomor Serial</div>
+            <div style="color: white; font-size: 18px; margin-left: 20px;">Daftar Masker</div>
         </div>
         <div onclick="logout()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
