--- a/admins.html
+++ b/admins.html
@@ -3,22 +3,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery.js"></script>
     <script src="js/global.js"></script>
-    <script src="js/diseases.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/admins.js"></script>
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/diseases.css" rel="stylesheet">
 </head>
 <body>
-<div style="width: 100%; overflow-x: hidden!important; position: relative;">
-    <div style="width: 100%; display: flex; flex-flow: column nowrap;">
+<div style="width: 100%; height: 100%; overflow-x: hidden!important; position: relative;">
+    <div style="width: 100%; height: 100%; display: flex; flex-flow: column nowrap;">
         <div style="z-index: 3000; width: 100%; height: 60px; display: flex; flex-flow: row nowrap; position: fixed; left: 0; top: 0;">
             <div id="menu" onclick="openMenu()" style="width: 50px; height: 100%; display: flex; align-items: center;">
                 <img src="img/menu.png" width="20px" height="20px" style="margin-left: 10px;">
             </div>
             <div style="width: 100%; height: 100%; display: flex; flex-flow: row nowrap; align-items: center; background-color: #3fd598;">
-                <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">DAFTAR PENYAKIT</div>
+                <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">DAFTAR ADMIN</div>
             </div>
         </div>
-        <div id="diseases" style="width: 100%; display: flex; flex-flow: column nowrap; padding: 10px; margin-top: 60px; margin-bottom: 70px;">
+        <div style="width: 100%; height: calc(100% - 50px); display: flex; flex-flow: column nowrap; margin-top: 60px;">
+            <div id="admins" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 20px;"></div>
         </div>
     </div>
     <div id="overlay" onclick="closeMenu()"
@@ -61,44 +62,51 @@
             <div style="color: white; font-size: 18px; margin-left: 20px;">Keluar</div>
         </div>
     </div>
-    <div style="box-shadow: 0 -4px 8px rgba(0, 0, 0, .5); background-color: white; width: 100%; padding-top: 10px; padding-bottom: 10px; position: fixed; bottom: 0; right: 0; display: flex; flex-flow: row nowrap; justify-content: flex-end; align-items: center;">
-        <button onclick="addDisease()" class="button1"
-                style="padding-left: 20px; padding-right: 20px; margin-right: 10px;">TAMBAHKAN PENYAKIT
-        </button>
+</div>
+<div id="admin-menu" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+    <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
+        <div style="width: 100%; display: flex; justify-content: center;">
+            <div style="color: black; font-size: 18px; font-weight: bold;">Menu</div>
+        </div>
+        <div onclick="editAdmin()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
+            <div style="color: black;">Edit</div>
+        </div>
+        <div onclick="deleteAdmin()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+            <div style="color: black;">Hapus</div>
+        </div>
+        <div onclick="closeAdminMenuDialog()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+            <div style="color: black;">Tutup</div>
+        </div>
     </div>
 </div>
-<div id="edit-disease" style="z-index: 4000; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+<div id="edit-admin" style="z-index: 4000; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: calc(100% - 60px); max-height: calc(100% - 40px); margin-top: 20px; margin-bottom: 20px; margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap; overflow-y: scroll;">
         <div style="width: 100%; display: flex; justify-content: center;">
-            <div id="edit-disease-title" style="color: black; font-size: 18px; font-weight: bold;">Edit Penyakit</div>
+            <div id="edit-admin-title" style="color: black; font-size: 18px; font-weight: bold;">Edit Pengguna</div>
         </div>
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Nama penyakit:
+            Nama:
         </div>
-        <input type="text" class="flat-input-2" id="disease-name">
+        <input type="text" class="flat-input-2" id="admin-name">
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Ditemukan pada tahun:
+            Email:
         </div>
-        <input type="text" class="flat-input-2" id="disease-found">
+        <input type="text" class="flat-input-2" id="admin-email">
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Tahun paling banyak kasus:
+            No. HP:
         </div>
-        <input type="text" class="flat-input-2" id="disease-years">
+        <input type="text" class="flat-input-2" id="admin-phone">
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Kasus kematian:
+            Kata sandi:
         </div>
-        <input type="text" class="flat-input-2" id="disease-death">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Sejarah penyakit:
-        </div>
-        <input type="text" class="flat-input-2" id="disease-history">
+        <input type="password" class="flat-input-2" id="admin-password">
         <div style="width: 100%; display: flex; flex-flow: row nowrap; justify-content: flex-end; margin-bottom: 20px;">
-            <button id="edit-disease-cancel" class="flat-button-2">Batal</button>
-            <button id="edit-disease-ok" class="flat-button-2">OK</button>
+            <button id="edit-admin-cancel" class="flat-button-2">Batal</button>
+            <button id="edit-admin-ok" class="flat-button-2">OK</button>
         </div>
     </div>
 </div>
-<div id="loading-container" style="z-index: 2; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+<div id="loading-container" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: 200px; height: 100px; margin-top: 20px; margin-bottom: 20px; margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; justify-content: center; align-items: center;">
         <div id="loading-text" style="color: black;">Memuat...</div>
     </div>
@@ -107,21 +115,8 @@
     <div id="toast-text" style="margin-bottom: 20px; padding-left: 10px; padding-right: 10px; height: 30px; background-color: rgba(0, 0, 0, .9); border-radius: 5px; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3); color: white;">
     </div>
 </div>
-<div id="disease-menu" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
-    <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
-        <div style="width: 100%; display: flex; justify-content: center;">
-            <div style="color: black; font-size: 18px; font-weight: bold;">Menu</div>
-        </div>
-        <div onclick="editDisease()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            <div style="color: black;">Edit</div>
-        </div>
-        <div onclick="deleteDisease()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-            <div style="color: black;">Hapus</div>
-        </div>
-        <div onclick="closeDiseaseMenuDialog()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-            <div style="color: black;">Tutup</div>
-        </div>
-    </div>
+<div onclick="addAdmin()" class="fab" style="width: 50px; height: 50px; position: fixed; bottom: 0; right: 0; margin-right: 20px; margin-bottom: 20px; border-radius: 50%; box-shadow: rgba(0, 0, 0, .5); display: flex; justify-content: center; align-items: center;">
+    <img src="img/add-2.png" width="30px" height="30px">
 </div>
 <div id="confirm-container" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
@@ -134,6 +129,19 @@
         <div style="width: 100%; display: flex; flex-flow: row nowrap; justify-content: flex-end; margin-bottom: 20px;">
             <button id="confirm-cancel" class="flat-button-2">Batal</button>
             <button id="confirm-ok" class="flat-button-2">OK</button>
+        </div>
+    </div>
+</div>
+<div id="alert-container" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+    <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
+        <div style="width: 100%; display: flex; justify-content: center;">
+            <div id="alert-title" style="color: black; font-size: 18px; font-weight: bold;"></div>
+        </div>
+        <div style="width: calc(100% - 40px); margin-left: 20px; margin-right: 20px;">
+            <div id="alert-desc" style="color: black;"></div>
+        </div>
+        <div style="width: 100%; display: flex; flex-flow: row nowrap; justify-content: flex-end; margin-bottom: 20px;">
+            <button id="alert-ok" class="flat-button-2">OK</button>
         </div>
     </div>
 </div>
