--- a/viewredeem.html
+++ b/viewredeem.html
@@ -20,6 +20,9 @@
         </div>
         <div style="width: 100%; display: flex; flex-flow: column nowrap; margin-top: 60px;">
             <div style="width: 100%; display: flex; justify-content: center; margin-top: 10px;">
+                <button onclick="backToRedeems()" class="colorful-button">Kembali ke Daftar</button>
+            </div>
+            <div style="width: 100%; display: flex; justify-content: center; margin-top: 10px;">
                 <img id="mask-img" width="300px" height="300px">
             </div>
             <div style="width: calc(100% - 40px); margin-left: 20px; margin-right: 20px; height: 1px; background-color: rgba(0, 0, 0, .5); margin-top: 10px;"></div>
