--- a/serials.html
+++ b/serials.html
@@ -4,7 +4,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/global.js"></script>
     <script src="js/home.js"></script>
-    <script src="js/masks.js"></script>
+    <script src="js/serials.js"></script>
     <link href="css/global.css" rel="stylesheet">
 </head>
 <body>
@@ -15,11 +15,11 @@
                 <img src="img/menu.png" width="20px" height="20px" style="margin-left: 10px;">
             </div>
             <div style="width: 100%; height: 100%; display: flex; flex-flow: row nowrap; align-items: center; background-color: #3fd598;">
-                <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">DAFTAR MASKER</div>
+                <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">DAFTAR KODE SERIAL</div>
             </div>
         </div>
         <div style="width: 100%; height: calc(100% - 50px); display: flex; flex-flow: column nowrap; margin-top: 60px;">
-            <div id="masks" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 20px;"></div>
+            <div id="serials" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 20px;"></div>
         </div>
     </div>
     <div id="overlay" onclick="closeMenu()"
@@ -73,67 +73,34 @@
         </div>
     </div>
 </div>
-<div id="mask-menu" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+<div id="serial-menu" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
         <div style="width: 100%; display: flex; justify-content: center;">
             <div style="color: black; font-size: 18px; font-weight: bold;">Menu</div>
         </div>
-        <div onclick="editMask()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
+        <div onclick="editSerial()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
             <div style="color: black;">Edit</div>
         </div>
-        <div onclick="deleteMask()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+        <div onclick="deleteSerial()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
             <div style="color: black;">Hapus</div>
         </div>
-        <div onclick="closeMaskMenuDialog()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+        <div onclick="closeSerialMenuDialog()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
             <div style="color: black;">Tutup</div>
         </div>
     </div>
 </div>
-<div id="edit-mask" style="z-index: 4000; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+<div id="edit-serial" style="z-index: 4000; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: calc(100% - 60px); height: calc(100% - 40px); margin-top: 20px; margin-bottom: 20px; margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap; overflow-y: scroll;">
         <div style="width: 100%; display: flex; justify-content: center;">
-            <div id="edit-mask-title" style="color: black; font-size: 18px; font-weight: bold;">Edit Masker</div>
+            <div id="edit-serial-title" style="color: black; font-size: 18px; font-weight: bold;">Edit Serial</div>
         </div>
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Nama masker:
+            Kode serial:
         </div>
-        <input type="text" class="flat-input-2" id="mask-name">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Harga:
-        </div>
-        <input type="text" class="flat-input-2" id="mask-price">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Jumlah poin minimum:
-        </div>
-        <input type="text" class="flat-input-2" id="minimum-points">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Deskripsi
-        </div>
-        <input type="text" class="flat-input-2" id="mask-desc">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Kode serial masker:
-        </div>
-        <input type="text" class="flat-input-2" id="mask-serial">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Kode serial filter:
-        </div>
-        <input type="text" class="flat-input-2" id="filter-serial">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Link ke toko:
-        </div>
-        <input type="text" class="flat-input-2" id="mask-link">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Gambar:
-        </div>
-        <div style="width: 100%; display: flex; justify-content: center;">
-            <img id="mask-img" width="100px" height="100px" style="background-color: #dddddd;">
-        </div>
-        <div style="width: 100%; height: 40px; display: flex; justify-content: center; margin-top: 10px;">
-            <button onclick="changeMaskPicture()" class="button1" style="width: 200px; height: 35px;">Ubah Gambar</button>
-        </div>
+        <input type="text" class="flat-input-2" id="serial">
         <div style="width: 100%; display: flex; flex-flow: row nowrap; justify-content: flex-end; margin-bottom: 20px;">
-            <button id="edit-mask-cancel" class="flat-button-2">Batal</button>
-            <button id="edit-mask-ok" class="flat-button-2">OK</button>
+            <button id="edit-serial-cancel" class="flat-button-2">Batal</button>
+            <button id="edit-serial-ok" class="flat-button-2">OK</button>
         </div>
     </div>
 </div>
@@ -146,7 +113,7 @@
     <div id="toast-text" style="margin-bottom: 20px; padding-left: 10px; padding-right: 10px; height: 30px; background-color: rgba(0, 0, 0, .9); border-radius: 5px; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3); color: white;">
     </div>
 </div>
-<div onclick="addMask()" class="fab" style="width: 50px; height: 50px; position: fixed; bottom: 0; right: 0; margin-right: 20px; margin-bottom: 20px; border-radius: 50%; box-shadow: rgba(0, 0, 0, .5); display: flex; justify-content: center; align-items: center;">
+<div onclick="addSerial()" class="fab" style="width: 50px; height: 50px; position: fixed; bottom: 0; right: 0; margin-right: 20px; margin-bottom: 20px; border-radius: 50%; box-shadow: rgba(0, 0, 0, .5); display: flex; justify-content: center; align-items: center;">
     <img src="img/add-2.png" width="30px" height="30px">
 </div>
 <div id="confirm-container" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
