--- a/viewredeem.html
+++ b/viewredeem.html
@@ -73,12 +73,12 @@
         </div>
         <div onclick="openMasks()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
-            <img src="img/coupon.png" width="20px" height="20px" style="margin-left: 20px;">
+            <img src="img/mask-2.png" width="20px" height="20px" style="margin-left: 20px;">
             <div style="color: white; font-size: 18px; margin-left: 20px;">Daftar Masker</div>
         </div>
         <div onclick="openSerialNumbers()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
-            <img src="img/mask.png" width="20px" height="20px" style="margin-left: 20px;">
+            <img src="img/coupon.png" width="20px" height="20px" style="margin-left: 20px;">
             <div style="color: white; font-size: 18px; margin-left: 20px;">Daftar Serial</div>
         </div>
         <div onclick="openRedeems()" class="menu-item"
