--- a/serials.html
+++ b/serials.html
@@ -21,6 +21,7 @@
         <div style="width: 100%; height: calc(100% - 50px); display: flex; flex-flow: column nowrap; margin-top: 60px;">
             <div id="serials" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 20px;"></div>
         </div>
+        <button id="next-serial" onclick="nextSerials()" class="button1" style="position: fixed; left: 0; bottom: 10px;">Berikutnya</button>
     </div>
     <div id="overlay" onclick="closeMenu()"
          style="display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%;"></div>
