--- a/serials.html
+++ b/serials.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div style="width: 100%; height: 100%; overflow-x: hidden!important; position: relative;">
-    <div style="width: 100%; height: 100%; display: flex; flex-flow: column nowrap;">
+    <div style="width: 100%; display: flex; flex-flow: column nowrap;">
         <div style="z-index: 3000; width: 100%; height: 60px; display: flex; flex-flow: row nowrap; position: fixed; left: 0; top: 0;">
             <div id="menu" onclick="openMenu()" style="width: 50px; height: 100%; display: flex; align-items: center;">
                 <img src="img/menu.png" width="20px" height="20px" style="margin-left: 10px;">
@@ -18,10 +18,12 @@
                 <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">DAFTAR KODE SERIAL</div>
             </div>
         </div>
-        <div style="width: 100%; height: calc(100% - 50px); display: flex; flex-flow: column nowrap; margin-top: 60px;">
-            <div id="serials" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 20px;"></div>
+        <div style="width: 100%; display: flex; flex-flow: column nowrap; margin-top: 60px;">
+            <div id="serials" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 70px;"></div>
         </div>
-        <button id="next-serial" onclick="nextSerials()" class="button1" style="position: fixed; left: 0; bottom: 10px;">Berikutnya</button>
+        <div style="position: fixed; left: 0; bottom: 10px; width: 100%; display: flex; justify-content: center;">
+            <button id="next-serial" onclick="nextSerials()" class="button1">Berikutnya</button>
+        </div>
     </div>
     <div id="overlay" onclick="closeMenu()"
          style="display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%;"></div>
