--- a/masks.html
+++ b/masks.html
@@ -4,8 +4,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/global.js"></script>
     <script src="js/home.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
+    <script lang="javascript" src="js/xlsx.full.min.js"></script>
     <script src="js/masks.js"></script>
     <link href="css/global.css" rel="stylesheet">
 </head>
