--- a/serials.html
+++ b/serials.html
@@ -19,6 +19,9 @@
             </div>
         </div>
         <div style="width: 100%; display: flex; flex-flow: column nowrap; margin-top: 60px;">
+            <div style="width: 100%; display: flex; justify-content: center; margin-top: 10px;">
+                <button onclick="uploadXLS()" class="blue-button" style="height: 35px; padding-left: 16px; padding-right: 16px;">Upload XLS</button>
+            </div>
             <div id="serials" style="display: flex; flex-flow: column nowrap; align-items: center; margin-bottom: 70px;"></div>
         </div>
         <div style="position: fixed; left: 0; bottom: 10px; width: 100%; display: flex; justify-content: center;">
