--- a/serials.html
+++ b/serials.html
@@ -4,6 +4,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/global.js"></script>
     <script src="js/home.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
     <script src="js/serials.js"></script>
     <link href="css/global.css" rel="stylesheet">
 </head>
